# blackholeCalc

./: CITATION.cff  LICENSE  main.py  pyproject.toml  readme.md
blackholeCalc/: __init__.py  guide.py
blackholeCalc/maths/: __init__.py  constants.py  units.py
blackholeCalc/physics/: __init__.py  classifier.py  metrics.py  thermodynamics.py
blackholeCalc/visualization/: __init__.py  visualizer.py
blackholecalc/: __init__.py  api.py  dynamics_engine.py  physics_models.py  run_manager.py  visualization_engine.py
examples/: create_blackhole.py  gravitional_waves.py  visualize_blackhole.py
tests/: test_metrics.py  test_thermodynamics.py  test_waveform.py
